# daal

./: .gitignore  WORKSPACE  makefile
algorithms/kernel/covariance/: covariance_container.h  covariance_dense_default_batch_fp16_cpu.cpp  covariance_dense_default_batch_fp16_dispatcher.cpp  covariance_result.h  (+2 more)
cpp/daal/: BUILD  fix_includes.py
cpp/onedal/: BUILD  accessor.hpp  accessor_test.cpp  array.cpp  array.hpp  array_test.cpp  common.hpp  common_helpers.hpp  data_types.hpp  dm_test.cpp  exception.cpp  exception.hpp  execution_context.cpp  execution_context.hpp  execution_context_dp.hpp  homogen_table.cpp  homogen_table.hpp  memory.hpp  range.hpp  ranges.hpp  table.cpp  table.hpp  table_builder.cpp  table_builder.hpp  table_builder_test.cpp  table_homogen.cpp  table_homogen.hpp  table_homogen_impl.cpp  table_homogen_impl.hpp  table_impl.hpp  table_metadata.hpp  table_test.cpp  train.hpp  type_traits.hpp  types_data.hpp
cpp/onedal/data_management/: BUILD.bazel  array.cpp  array.hpp  create_array.hpp  create_table.hpp  data_format.hpp  homogen_table.cpp  homogen_table.hpp  slice.cpp  slice.hpp  table.cpp  table.hpp
cpp/onedal/data_management/detail/: array_impl.hpp  create_array.cpp  create_array.hpp  create_table.cpp  create_table.hpp  homogen_table_data.cpp  homogen_table_data.hpp  homogen_table_impl.cpp  homogen_table_impl.hpp  slicable.hpp  slice_impl.hpp  table_data.hpp  table_impl.hpp
dev/bazel/: dal.bzl
dev/gpu_tools/: zeinfo.cpp  zexx.hpp
examples/cpp_sycl/: makefile_lnx
include/services/: daal_defines.h
service/kernel/: error_handling.cpp
(+2566 files in other folders)
